fix: Arrumado alguns snaps no grid incorretos

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
         <button type="button" class="close" id="close-edit" style="color:white; padding: 5px; right:0; transform: translate(0,-80%); position: absolute; background: rgba(47, 51, 54, 1); font-size: 12px; border-radius: 3px 3px 0px 0px;">Fechar</button>    
         <input id="input-import" type="file" name="input-import" accept=".gproj" style="display: none;" />
         <div class="widget-body">
-                <input type="text" id="qr-url" class="form-control" placeholder="cole o link aqui" aria-label="Largura">
+                <input type="text" id="qr-url" class="form-control" placeholder="Cole o link aqui" aria-label="Largura">
                 <select id="qr-size" class="select-size-qr">
                     <option value="150x150">150x150</option>
                     <option value="300x300">300x300</option>
